--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Caja | Airtek</title>
+    <style>
+      input:checked ~ .radio {
+        color: white;
+        background-color: #111111;
+      }
+      input:checked ~ .pago {
+        color: white;
+        background-color: #0066ff;
+      }
+    </style>
   </head>
   <body class="bg-gray-100">
     <header class="bg-white">
@@ -38,7 +48,7 @@
             </div>
             <div class="flex justify-around">
               <div class="flex flex-col justify-around">
-                <div class="flex my-3">
+                <div class="flex my-2">
                   <img
                     src="./assets/svg/Group 79.svg"
                     alt="Ícono de usuario azul"
@@ -46,7 +56,7 @@
                   />
                   <h3>Yajaira Velazco</h3>
                 </div>
-                <div class="flex my-3">
+                <div class="flex my-2">
                   <img
                     src="./assets/svg/mail.svg"
                     alt="Icono de mail azul"
@@ -54,7 +64,7 @@
                   />
                   <p>prueba@airtek.com.ve</p>
                 </div>
-                <div class="flex my-3">
+                <div class="flex my-2">
                   <img
                     src="./assets/svg/Fecha.svg"
                     alt="Icono de fecha"
@@ -66,7 +76,7 @@
 
               <div class="flex flex-col">
                 <div class="flex justify-between">
-                  <div class="flex my-3">
+                  <div class="flex my-2">
                     <img
                       src="./assets/svg/file-minus.svg"
                       alt="Icono de hoja"
@@ -75,7 +85,7 @@
                     <p>C.I. 25902940</p>
                   </div>
                   <div class="flex">
-                    <div class="flex my-3">
+                    <div class="flex my-2">
                       <img
                         src="./assets/svg/phone.svg"
                         alt="Teléfono"
@@ -85,7 +95,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="flex my-3">
+                <div class="flex my-2">
                   <img
                     src="./assets/svg/map-pin.svg"
                     alt="Pin de posicionamiento"
@@ -263,34 +273,91 @@
         </table>
       </section>
 
-      <section>
-        <form>
-          <label for="pago">
-            <input type="radio" value="debito" name="pago" id="" />
-            <input type="radio" name="pago" id="" />
-          </label>
-          <label for="moneda">
-            <input type="radio" name="moneda" id="" /><input
-              type="radio"
-              name="moneda"
-              id=""
-            />
-          </label>
-          <label for="banco">
-            <select>
+      <section class="flex flex-col mx-9 my-2">
+        <form class="flex items-start space-x-4">
+          <div class="inline-flex flex-col w-fit">
+            <span class="block m-auto">Forma de Pago</span>
+            <div class="border border-gray-500 rounded-lg inline-flex">
+              <div class="inline-flex rounded-lg">
+                <input
+                  type="radio"
+                  name="pago"
+                  id="roomPrivate"
+                  checked
+                  hidden
+                />
+                <label
+                  for="roomPrivate"
+                  class="radio text-center self-center py-3 px-4 rounded cursor-pointer"
+                  >Débito</label
+                >
+              </div>
+              <div class="inline-flex rounded-lg">
+                <input type="radio" name="pago" id="roomPublic" hidden />
+                <label
+                  for="roomPublic"
+                  class="radio text-center self-center py-3 px-4 rounded cursor-pointer"
+                  >Efectivo</label
+                >
+              </div>
+            </div>
+          </div>
+          <div class="inline-flex flex-col w-fit">
+            <span class="block m-auto">Moneda</span>
+            <div class="border border-gray-500 rounded-lg inline-flex">
+              <div class="inline-flex rounded-lg">
+                <input type="radio" name="moneda" id="dolares" hidden checked />
+                <label
+                  for="dolares"
+                  class="pago text-center self-center py-3 px-4 rounded cursor-pointer"
+                  >Dolares</label
+                >
+              </div>
+              <div class="inline-flex rounded-lg">
+                <input type="radio" name="moneda" id="bolivares" hidden />
+                <label
+                  for="bolivares"
+                  class="pago text-center self-center py-3 px-4 rounded cursor-pointer"
+                  >Bolivares</label
+                >
+              </div>
+            </div>
+          </div>
+
+          <label class="inline-block" for="banco">
+            <span class="block">Banco</span>
+            <select
+              class="block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
+            >
               <option value="Banesco">Banesco</option>
               <option value="BNC">BNC</option>
               <option value="Venezuela">Venezuela</option>
             </select>
           </label>
-          <label for="monto">
-            <input type="text" value="25.00" />
+
+          <label class="inline-block" for="monto">
+            <span class="block">Monto</span>
+            <input
+              class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
+              type="text"
+              value="25.00"
+            />
           </label>
-          <label for="referencia">
-            <input type="text" value="AS54-SXAS" />
+          <label class="inline-block" for="referencia">
+            <span class="block">Referencia</span>
+            <input
+              class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
+              type="text"
+              value="AS54-SXAS"
+            />
           </label>
-          <label for="anadirPago">
-            <input type="button" value="Agregar" />
+          <label class="inline-block" for="anadirPago">
+            <span class="block">Pagar</span>
+            <input
+              class="block text-white bg-[#0066ff] rounded-lg inline-flex py-3 px-8"
+              type="button"
+              value="Agregar"
+            />
           </label>
         </form>
       </section>
