--- a/index.html
+++ b/index.html
@@ -133,243 +133,311 @@
             Histórico de Pagos
           </button>
         </div>
-
-        <table
-          class="border p-2 text-center overflow-auto w-full whitespace-nowrap text-sm"
-        >
-          <thead>
-            <tr class="bg-gray-200 h-10 divide-x overflow-auto">
-              <th class="px-2 font-medium">Factura</th>
-              <th class="px-2 font-medium">Contrato</th>
-              <th class="px-2 font-medium">Plan</th>
-              <th class="px-2 font-medium">PON</th>
-              <th class="px-2 font-medium">Dirección</th>
-              <th class="px-2 font-medium">Estatus</th>
-              <th class="px-2 font-medium">Fecha Emisión</th>
-              <th class="px-2 font-medium">Cuentas por Cobrar</th>
-              <th class="px-2 font-medium">Crédito</th>
-              <th class="px-2 font-medium">Total</th>
-            </tr>
-          </thead>
-          <tbody class="overflow-auto divide-y">
-            <tr class="hover:bg-gray-200">
-              <td>0007542</td>
-              <td>000784</td>
-              <td>50M</td>
-              <td>12452355</td>
-              <td>Calle 68 entre av 17 y 18...</td>
-              <td>
-                <span class="bg-green-700 rounded-full p-2 px-5 text-white"
-                  >Habilitado</span
-                >
-              </td>
-              <td>16/11/2021</td>
-              <td>
-                <div>
-                  <p>US$25</p>
-                  <p>Bs. 125.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$5</p>
-                  <p>Bs. 25.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$20</p>
-                  <p>Bs. 100.00</p>
-                </div>
-              </td>
-            </tr>
-            <tr class="hover:bg-gray-200">
-              <td>0007542</td>
-              <td>000784</td>
-              <td>50M</td>
-              <td>12452355</td>
-              <td>Calle 68 entre av 17 y 18...</td>
-              <td>
-                <span class="bg-green-700 rounded-full p-2 px-5 text-white"
-                  >Habilitado</span
-                >
-              </td>
-              <td>16/11/2021</td>
-              <td>
-                <div>
-                  <p>US$25</p>
-                  <p>Bs. 125.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$5</p>
-                  <p>Bs. 25.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$20</p>
-                  <p>Bs. 100.00</p>
-                </div>
-              </td>
-            </tr>
-            <tr class="hover:bg-gray-200">
-              <td>0007542</td>
-              <td>000784</td>
-              <td>50M</td>
-              <td>12452355</td>
-              <td>Calle 68 entre av 17 y 18...</td>
-              <td>
-                <span class="bg-green-700 rounded-full p-2 px-5 text-white"
-                  >Habilitado</span
-                >
-              </td>
-              <td>16/11/2021</td>
-              <td>
-                <div>
-                  <p>US$25</p>
-                  <p>Bs. 125.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$5</p>
-                  <p>Bs. 25.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$20</p>
-                  <p>Bs. 100.00</p>
-                </div>
-              </td>
-            </tr>
-            <tr class="hover:bg-gray-200">
-              <td>0007542</td>
-              <td>000784</td>
-              <td>50M</td>
-              <td>12452355</td>
-              <td>Calle 68 entre av 17 y 18...</td>
-              <td>
-                <span class="bg-green-700 rounded-full p-2 px-5 text-white"
-                  >Habilitado</span
-                >
-              </td>
-              <td>16/11/2021</td>
-              <td>
-                <div>
-                  <p>US$25</p>
-                  <p>Bs. 125.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$5</p>
-                  <p>Bs. 25.00</p>
-                </div>
-              </td>
-              <td>
-                <div>
-                  <p>US$20</p>
-                  <p>Bs. 100.00</p>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="rounded-xl border">
+          <table
+            class="border-separate border-spacing-1 text-center overflow-auto w-full whitespace-nowrap text-sm"
+          >
+            <thead class="">
+              <tr class="bg-gray-200 h-10 divide-x overflow-auto">
+                <th class="px-2 font-medium">Factura</th>
+                <th class="px-2 font-medium">Contrato</th>
+                <th class="px-2 font-medium">Plan</th>
+                <th class="px-2 font-medium">PON</th>
+                <th class="px-2 font-medium">Dirección</th>
+                <th class="px-2 font-medium">Estatus</th>
+                <th class="px-2 font-medium">Fecha Emisión</th>
+                <th class="px-2 font-medium">Cuentas por Cobrar</th>
+                <th class="px-2 font-medium">Crédito</th>
+                <th class="px-2 font-medium">Total</th>
+              </tr>
+            </thead>
+            <tbody class="overflow-auto divide-y">
+              <tr class="hover:bg-gray-200">
+                <td>0007542</td>
+                <td>000784</td>
+                <td>50M</td>
+                <td>12452355</td>
+                <td>Calle 68 entre av 17 y 18...</td>
+                <td>
+                  <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                    >Habilitado</span
+                  >
+                </td>
+                <td>16/11/2021</td>
+                <td>
+                  <div>
+                    <p>US$25</p>
+                    <p>Bs. 125.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$5</p>
+                    <p>Bs. 25.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$20</p>
+                    <p>Bs. 100.00</p>
+                  </div>
+                </td>
+              </tr>
+              <tr class="hover:bg-gray-200">
+                <td>0007542</td>
+                <td>000784</td>
+                <td>50M</td>
+                <td>12452355</td>
+                <td>Calle 68 entre av 17 y 18...</td>
+                <td>
+                  <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                    >Habilitado</span
+                  >
+                </td>
+                <td>16/11/2021</td>
+                <td>
+                  <div>
+                    <p>US$25</p>
+                    <p>Bs. 125.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$5</p>
+                    <p>Bs. 25.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$20</p>
+                    <p>Bs. 100.00</p>
+                  </div>
+                </td>
+              </tr>
+              <tr class="hover:bg-gray-200">
+                <td>0007542</td>
+                <td>000784</td>
+                <td>50M</td>
+                <td>12452355</td>
+                <td>Calle 68 entre av 17 y 18...</td>
+                <td>
+                  <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                    >Habilitado</span
+                  >
+                </td>
+                <td>16/11/2021</td>
+                <td>
+                  <div>
+                    <p>US$25</p>
+                    <p>Bs. 125.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$5</p>
+                    <p>Bs. 25.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$20</p>
+                    <p>Bs. 100.00</p>
+                  </div>
+                </td>
+              </tr>
+              <tr class="hover:bg-gray-200">
+                <td>0007542</td>
+                <td>000784</td>
+                <td>50M</td>
+                <td>12452355</td>
+                <td>Calle 68 entre av 17 y 18...</td>
+                <td>
+                  <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                    >Habilitado</span
+                  >
+                </td>
+                <td>16/11/2021</td>
+                <td>
+                  <div>
+                    <p>US$25</p>
+                    <p>Bs. 125.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$5</p>
+                    <p>Bs. 25.00</p>
+                  </div>
+                </td>
+                <td>
+                  <div>
+                    <p>US$20</p>
+                    <p>Bs. 100.00</p>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </section>
 
       <section class="flex flex-col mx-9 my-2">
-        <form class="flex items-start space-x-4 bg-white w-fit px-4 py-3 rounded-lg">
-          <div class="inline-flex flex-col w-fit">
-            <span class="block m-auto">Forma de Pago</span>
-            <div class="border border-gray-500 rounded-lg inline-flex">
-              <div class="inline-flex rounded-lg">
-                <input
-                  type="radio"
-                  name="pago"
-                  id="roomPrivate"
-                  checked
-                  hidden
-                />
-                <label
-                  for="roomPrivate"
-                  class="radio text-center self-center py-3 px-4 rounded cursor-pointer"
-                  >Débito</label
-                >
-              </div>
-              <div class="inline-flex rounded-lg">
-                <input type="radio" name="pago" id="roomPublic" hidden />
-                <label
-                  for="roomPublic"
-                  class="radio text-center self-center py-3 px-4 rounded cursor-pointer"
-                  >Efectivo</label
-                >
-              </div>
-            </div>
-          </div>
-          <div class="inline-flex flex-col w-fit">
-            <span class="block m-auto">Moneda</span>
-            <div class="border border-gray-500 rounded-lg inline-flex">
-              <div class="inline-flex rounded-lg">
-                <input type="radio" name="moneda" id="dolares" hidden checked />
-                <label
-                  for="dolares"
-                  class="pago text-center self-center py-3 px-4 rounded cursor-pointer"
-                  >Dolares</label
-                >
-              </div>
-              <div class="inline-flex rounded-lg">
-                <input type="radio" name="moneda" id="bolivares" hidden />
-                <label
-                  for="bolivares"
-                  class="pago text-center self-center py-3 px-4 rounded cursor-pointer"
-                  >Bolivares</label
-                >
-              </div>
-            </div>
-          </div>
-
-          <label class="inline-block" for="banco">
-            <span class="block">Banco</span>
-            <select
-              class="block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
+        <div class="inline-flex">
+          <div class="flex flex-col">
+            <form
+              class="flex items-start space-x-4 bg-white w-fit px-4 py-3 rounded-3xl"
             >
-              <option value="Banesco">Banesco</option>
-              <option value="BNC">BNC</option>
-              <option value="Venezuela">Venezuela</option>
-            </select>
-          </label>
+              <div class="inline-flex flex-col w-fit">
+                <span class="block m-auto">Forma de Pago</span>
+                <div class="border border-gray-500 rounded-lg inline-flex">
+                  <div class="inline-flex rounded-lg">
+                    <input
+                      type="radio"
+                      name="pago"
+                      id="roomPrivate"
+                      checked
+                      hidden
+                    />
+                    <label
+                      for="roomPrivate"
+                      class="radio text-center self-center py-3 px-4 rounded cursor-pointer"
+                      >Débito</label
+                    >
+                  </div>
+                  <div class="inline-flex rounded-lg">
+                    <input type="radio" name="pago" id="roomPublic" hidden />
+                    <label
+                      for="roomPublic"
+                      class="radio text-center self-center py-3 px-4 rounded cursor-pointer"
+                      >Efectivo</label
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="inline-flex flex-col w-fit">
+                <span class="block m-auto">Moneda</span>
+                <div class="border border-gray-500 rounded-lg inline-flex">
+                  <div class="inline-flex rounded-lg">
+                    <input
+                      type="radio"
+                      name="moneda"
+                      id="dolares"
+                      hidden
+                      checked
+                    />
+                    <label
+                      for="dolares"
+                      class="pago text-center self-center py-3 px-4 rounded cursor-pointer"
+                      >Dolares</label
+                    >
+                  </div>
+                  <div class="inline-flex rounded-lg">
+                    <input type="radio" name="moneda" id="bolivares" hidden />
+                    <label
+                      for="bolivares"
+                      class="pago text-center self-center py-3 px-4 rounded cursor-pointer"
+                      >Bolivares</label
+                    >
+                  </div>
+                </div>
+              </div>
 
-          <label class="inline-block" for="monto">
-            <span class="block">Monto</span>
-            <input
-              class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
-              type="text"
-              value="25.00"
-            />
-          </label>
-          <label class="inline-block" for="referencia">
-            <span class="block">Referencia</span>
-            <input
-              class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
-              type="text"
-              value="AS54-SXAS"
-            />
-          </label>
-          <label class="inline-block" for="anadirPago">
-            <span class="block">Pagar</span>
-            <div class="inline-flex bg-[#0066ff] rounded-lg items-center justify-center">
-              <i class="ml-5 fa-solid fa-arrow-down text-white"></i>
-              <input
-                class="block text-white inline-flex py-3 pr-8 pl-2"
-                type="button"
-                value="Agregar"
-              />
+              <label class="inline-block" for="banco">
+                <span class="block">Banco</span>
+                <select
+                  class="block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
+                >
+                  <option value="Banesco">Banesco</option>
+                  <option value="BNC">BNC</option>
+                  <option value="Venezuela">Venezuela</option>
+                </select>
+              </label>
+
+              <label class="inline-block" for="monto">
+                <span class="block">Monto</span>
+                <input
+                  class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
+                  type="text"
+                  value="25.00"
+                />
+              </label>
+              <label class="inline-block" for="referencia">
+                <span class="block">Referencia</span>
+                <input
+                  class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex py-3 px-4"
+                  type="text"
+                  value="AS54-SXAS"
+                />
+              </label>
+              <label class="inline-block" for="anadirPago">
+                <span class="block">Pagar</span>
+                <div
+                  class="inline-flex bg-[#0066ff] rounded-lg items-center justify-center"
+                >
+                  <i class="ml-5 fa-solid fa-arrow-down text-white"></i>
+                  <input
+                    class="block text-white inline-flex py-3 pr-8 pl-2"
+                    type="button"
+                    value="Agregar"
+                  />
+                </div>
+              </label>
+            </form>
+            <div>holisssssssssksoks</div>
+          </div>
+          <div class="inline-flex ml-5">
+            <div
+              class="grid grid-flow-col auto-cols-max border border-gray-500 rounded-lg"
+            >
+              <div class="">
+                <div
+                  class="flex flex-col h-full p-2 rounded-lg hover:bg-white transition-colors"
+                >
+                  <img
+                    class="w-10 h-auto"
+                    src="./assets/svg/icon-pago.svg"
+                    alt="Icono de pago azul"
+                  />
+                  <p class="font-bold text-md">Deuda:</p>
+                  <p class="font-medium">25$</p>
+                  <p>150,00 Bs</p>
+                </div>
+              </div>
+              <div>
+                <div
+                  class="flex flex-col h-full p-2 hover:bg-white transition-colors"
+                >
+                  <img
+                    class="w-10 h-auto"
+                    src="./assets/svg/icon-pago.svg"
+                    alt="Icono de pago azul"
+                  />
+                  <p class="font-bold text-md">Saldo a favor:</p>
+                  <p class="font-medium">25$</p>
+                  <p>150,00 Bs</p>
+                </div>
+              </div>
+              <div>
+                <div
+                  class="flex flex-col p-2 bg-amber-100 hover:bg-white transition-colors h-full"
+                >
+                  <img
+                    class="w-10 h-auto"
+                    src="./assets/svg/icon-pago.svg"
+                    alt="Icono de pago azul"
+                  />
+                  <p class="font-bold text-md">Total a pagar:</p>
+                  <p class="font-medium">25$</p>
+                  <p>150,00 Bs</p>
+                </div>
+              </div>
+
+              <div class="bg-blue-700 text-white h-full rounded-r-lg">
+                <button class="w-full h-full px-4">Procesar Pago</button>
+              </div>
             </div>
-          </label>
-        </form>
+          </div>
+        </div>
       </section>
     </main>
   </body>
