--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             Histórico de Pagos
           </button>
         </div>
-        <div class="rounded-xl border">
+        <div class="rounded-xl border text-sm">
           <table
             class="border-separate border-spacing-1 text-center overflow-auto w-full whitespace-nowrap text-sm"
           >
@@ -282,7 +282,7 @@
       </section>
 
       <section class="flex flex-col mx-9 my-2">
-        <div class="inline-flex">
+        <div class="flex">
           <div class="flex flex-col">
             <form
               class="flex items-start space-x-4 bg-white w-fit px-4 py-3 rounded-3xl"
@@ -383,9 +383,154 @@
                 </div>
               </label>
             </form>
-            <div>holisssssssssksoks</div>
+            <div class="rounded-xl border">
+              <table
+                class="border-separate border-spacing-1 text-center overflow-auto w-full whitespace-nowrap text-sm"
+              >
+                <thead class="">
+                  <tr class="bg-gray-200 h-10 divide-x overflow-auto">
+                    <th class="px-2 font-medium">Factura</th>
+                    <th class="px-2 font-medium">Contrato</th>
+                    <th class="px-2 font-medium">Plan</th>
+                    <th class="px-2 font-medium">PON</th>
+                    <th class="px-2 font-medium">Dirección</th>
+                    <th class="px-2 font-medium">Estatus</th>
+                    <th class="px-2 font-medium">Fecha Emisión</th>
+                    <th class="px-2 font-medium">Cuentas por Cobrar</th>
+                    <th class="px-2 font-medium">Crédito</th>
+                    <th class="px-2 font-medium">Total</th>
+                  </tr>
+                </thead>
+                <tbody class="overflow-auto divide-y">
+                  <tr class="hover:bg-gray-200">
+                    <td>0007542</td>
+                    <td>000784</td>
+                    <td>50M</td>
+                    <td>12452355</td>
+                    <td>Calle 68 entre av 17 y 18...</td>
+                    <td>
+                      <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                        >Habilitado</span
+                      >
+                    </td>
+                    <td>16/11/2021</td>
+                    <td>
+                      <div>
+                        <p>US$25</p>
+                        <p>Bs. 125.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$5</p>
+                        <p>Bs. 25.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$20</p>
+                        <p>Bs. 100.00</p>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr class="hover:bg-gray-200">
+                    <td>0007542</td>
+                    <td>000784</td>
+                    <td>50M</td>
+                    <td>12452355</td>
+                    <td>Calle 68 entre av 17 y 18...</td>
+                    <td>
+                      <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                        >Habilitado</span
+                      >
+                    </td>
+                    <td>16/11/2021</td>
+                    <td>
+                      <div>
+                        <p>US$25</p>
+                        <p>Bs. 125.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$5</p>
+                        <p>Bs. 25.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$20</p>
+                        <p>Bs. 100.00</p>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr class="hover:bg-gray-200">
+                    <td>0007542</td>
+                    <td>000784</td>
+                    <td>50M</td>
+                    <td>12452355</td>
+                    <td>Calle 68 entre av 17 y 18...</td>
+                    <td>
+                      <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                        >Habilitado</span
+                      >
+                    </td>
+                    <td>16/11/2021</td>
+                    <td>
+                      <div>
+                        <p>US$25</p>
+                        <p>Bs. 125.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$5</p>
+                        <p>Bs. 25.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$20</p>
+                        <p>Bs. 100.00</p>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr class="hover:bg-gray-200">
+                    <td>0007542</td>
+                    <td>000784</td>
+                    <td>50M</td>
+                    <td>12452355</td>
+                    <td>Calle 68 entre av 17 y 18...</td>
+                    <td>
+                      <span class="bg-green-700 rounded-full p-2 px-5 text-white"
+                        >Habilitado</span
+                      >
+                    </td>
+                    <td>16/11/2021</td>
+                    <td>
+                      <div>
+                        <p>US$25</p>
+                        <p>Bs. 125.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$5</p>
+                        <p>Bs. 25.00</p>
+                      </div>
+                    </td>
+                    <td>
+                      <div>
+                        <p>US$20</p>
+                        <p>Bs. 100.00</p>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
-          <div class="inline-flex ml-5">
+          <div class="inline-flex ml-5 h-max">
             <div
               class="grid grid-flow-col auto-cols-max border border-gray-500 rounded-lg"
             >
