--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
               Histórico de Pagos
             </button>
           </div>
-          <div class="rounded-xl border text-sm">
+          <div class="rounded-xl border text-sm bg-white">
             <table
               class="border-separate border-spacing-1 text-center overflow-auto w-full whitespace-nowrap text-sm"
             >
@@ -282,7 +282,7 @@
           </div>
           <div class="flex flex-col">
             <form
-              class="flex items-start space-x-4 bg-white w-fit px-4 py-3 rounded-3xl"
+              class="flex items-start space-x-4 bg-white w-fit my-5 px-4 py-3 rounded-3xl"
             >
               <div class="inline-flex flex-col w-fit">
                 <span class="block m-auto">Forma de Pago</span>
@@ -380,7 +380,7 @@
                 </div>
               </label>
             </form>
-            <div class="rounded-xl border">
+            <div class="rounded-xl border bg-white">
               <table
                 class="border-separate border-spacing-1 text-center overflow-auto w-full whitespace-nowrap text-sm"
               >
@@ -530,7 +530,7 @@
             </div>
           </div>
         </div>
-        <div class="inline-flex  h-max">
+        <div class="inline-flex  h-max mt-8">
           <div
             class="grid grid-flow-row auto-rows-max border border-gray-500 rounded-lg"
           >
