fix blue color and font to sm

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <section class=" w-full ">
         
           <div class="text-sm">
-            <button class="h-8 bg-blue-800 rounded-t-md w-32 text-white">
+            <button class="h-8 bg-[#0066ff] rounded-t-md w-32 text-white">
               Cobrar
             </button>
             <button
@@ -152,7 +152,7 @@
                   <th class="px-2 font-medium">Total</th>
                 </tr>
               </thead>
-              <tbody class="overflow-auto divide-y divide-gray-200 text-[13px]">
+              <tbody class="overflow-auto divide-y divide-gray-200">
                 <!--               <tr class="hover:bg-gray-100  ">
                 <td>0007542</td>
                 <td>000784</td>
@@ -398,7 +398,7 @@
                       <th class="px-2 font-medium">Accion</th>
                     </tr>
                   </thead>
-                  <tbody class="overflow-auto divide-y divide-gray-200 text-[13px]">
+                  <tbody class="overflow-auto divide-y divide-gray-200">
                     <tr class="hover:bg-gray-100     ">
                       <td>0007542</td>
                       <td>25$ / 125,00 Bs.</td>
@@ -457,7 +457,7 @@
                   </div>
                 </div>
     
-                <div class="bg-blue-700 text-white h-full rounded-b-lg">
+                <div class="bg-[#0066ff] text-white h-full rounded-b-lg">
                   <button class="w-full h-full px-5 py-2">Procesar Pago</button>
                 </div>
               </div>
