--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
               Cobrar
             </button>
             <button
-              class="h-8 bg-gray-200 border-2 border-x-blue-800 border-t-blue-800 text-blue-800 rounded-t-md w-32"
+              class="h-8 bg-gray-200 border-2 border-x-[#0066ff] border-t-[#0066ff] text-[#0066ff] rounded-t-md w-32"
             >
               Servicios
             </button>
             <button
-              class="h-8 bg-gray-200 border-2 border-x-blue-800 text-blue-800 border-t-blue-800 rounded-t-md w-32"
+              class="h-8 bg-gray-200 border-2 border-x-[#0066ff] text-[#0066ff] border-t-[#0066ff] rounded-t-md w-32"
             >
               Histórico de Pagos
             </button>
