padding and move icon to button

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 <label class="inline-block" for="banco">
                   <span class="block">Banco</span>
                   <select
-                    class="block border border-gray-500 bg-transparent rounded-lg inline-flex p-2"
+                    class="block border border-gray-500 bg-transparent rounded-lg inline-flex p-2 px-6"
                   >
                     <option value="Banesco">Banesco</option>
                     <option value="BNC">BNC</option>
@@ -356,7 +356,7 @@
                 <label class="inline-block" for="monto">
                   <span class="block">Monto</span>
                   <input
-                    class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex p-2"
+                    class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex p-2 px-6"
                     type="text"
                     value="25.00"
                   />
@@ -364,7 +364,7 @@
                 <label class="inline-block" for="referencia">
                   <span class="block">Referencia</span>
                   <input
-                    class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex p-2"
+                    class="w-32 block border border-gray-500 bg-transparent rounded-lg inline-flex p-2 px-6"
                     type="text"
                     value="AS54-SXAS"
                   />
@@ -374,12 +374,14 @@
                   <div
                     class="inline-flex bg-[#0066ff] rounded-lg items-center justify-center"
                   >
-                    <i class="ml-5 fa-solid fa-arrow-down text-white"></i>
-                    <input
-                      class="block text-white inline-flex py-3 pr-8 pl-2"
+                    
+                    <button
+                      class="block text-white inline-flex justify-center items-center py-2 pr-8 pl-2"
                       type="button"
-                      value="Agregar"
-                    />
+                      >
+                      <i class="mx-3 fa-solid fa-arrow-down text-white"></i>
+                      Agregar</button>
+                    
                   </div>
                 </label>
               </form>
